<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ServiceFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="9"
        android:columnCount="1">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_row="2"
            android:layout_column="0"
            android:columnCount="2"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/labelPollingStrategy"
                android:id="@+id/textStrategy2"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/switchPollingStrategy"
                android:layout_margin="@dimen/text_margin"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="right" />
        </GridLayout>

        <!-- icon Polling  0,3 -->
        <GridLayout
            android:layout_width="343dp"
            android:layout_height="88dp"
            android:layout_column="0"
            android:layout_row="3"
            android:columnCount="3"
            android:rowCount="1">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_row="0"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/iconBatteryStrategy2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_row="0"
                    android:contentDescription="@string/iconBattery"
                    android:src="@drawable/ic_battery_90" />

                <TextView
                    android:id="@+id/textBatteryStrategy2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_row="1"
                    android:text="@string/labelBatteryHigh"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </GridLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginRight="30dp"
                android:layout_row="0"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/iconPrecisionStrategy2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_row="0"
                    android:contentDescription="@string/iconPrecision"
                    android:src="@drawable/ic_gps_precision" />

                <TextView
                    android:id="@+id/textPrecisionStrategy2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/labelPrecision"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </GridLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginRight="30dp"
                android:layout_row="0"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/iconConnectionStrategy2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_row="0"
                    android:contentDescription="@string/iconnetwork"
                    android:src="@drawable/ic_network" />

                <TextView
                    android:id="@+id/textConnectionStrategy2"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/labelLowNetwork"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </GridLayout>

        </GridLayout>

        <!-- better approach Strategy  0,4 -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_row="4"
            android:layout_column="0"
            android:columnCount="2"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/labelBetterApproach"
                android:id="@+id/textStrategy3"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/switchBetterApproachStrategy"
                android:layout_margin="@dimen/text_margin"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="right" />
        </GridLayout>

        <!-- icon Better Approach Strategy 0,5 -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_column="0"
            android:layout_row="5"
            android:columnCount="3"
            android:rowCount="1">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_row="0"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/iconBatteryStrategy3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_row="0"
                    android:contentDescription="@string/iconBattery"
                    android:contextClickable="true"
                    android:src="@drawable/ic_battery_90" />

                <TextView
                    android:id="@+id/textBatteryStrategy3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_row="1"
                    android:text="@string/labelBatteryLow"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </GridLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginRight="30dp"
                android:layout_row="0"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/iconPrecisionStrategy3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_row="0"
                    android:contentDescription="@string/iconPrecision"
                    android:src="@drawable/ic_gps_precision" />

                <TextView
                    android:id="@+id/textPrecisionStrategy3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/labelPrecision"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </GridLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginRight="30dp"
                android:layout_row="0"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/iconConnectionStrategy3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_row="0"
                    android:contentDescription="@string/iconnetwork"
                    android:src="@drawable/ic_network" />

                <TextView
                    android:id="@+id/textConnectionStrategy3"
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/labelLowNetwork"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </GridLayout>

        </GridLayout>
    </GridLayout>
</FrameLayout>
