<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/Benvenuti"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Benvenuto nella nostra applicazione."
            android:textStyle="normal|italic"
            android:textAlignment="center"
            android:textColor="#101010"/>

        <TextView
            android:id="@+id/Dettagli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ricevi le coordinate del parcheggio più vicino a te:"
            android:textAlignment="center"
            android:textColor="#000000" />


    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <Button
            android:id="@+id/SEND"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:onClick="send"
            android:text="Ricevi"
            android:textColor="@android:color/white"
            android:background="#1c1c1c" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="1"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Questo ti permetterà di visualizzare sulla mappa il Geofence di questo parcheggio!"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="normal|italic" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="160dp"
            android:layout_marginRight="130dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@mipmap/bs" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="1"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageFenceHome"
                android:background="@drawable/ic_map_multiple_fence"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/imageHomedescription" />

            <TextView
                android:id="@+id/textPickFenceHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="Se vuoi, puoi inserire anche i tui parcheggi preferiti."
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="1"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageStartHome"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_start_service" />

            <TextView
                android:id="@+id/textStartServiceHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="Ricordati di far partire il servizio."
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="1"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageMovementHome"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_movements"
                android:contentDescription="@string/imageMovementDescription" />

            <TextView
                android:id="@+id/textMovementHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="Viaggia senza pensieri!"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="1"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageSMSHome"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_sms"
                android:contentDescription="@string/imageSMSDescription" />

            <TextView
                android:id="@+id/textSMSHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="L'app ti avviserà automaticamente!"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
